# BilliardBalls

./: README.md  billiard2.cabal
src/: Ball.hs  Collision.hs  Configure.hs  Main.hs
